--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,10 +3,7 @@ driver:
   name: vagrant
 
 provisioner:
-  name: chef_zero
-  # You may wish to disable always updating cookbooks in CI or other testing environments.
-  # For example:
-  #   always_update_cookbooks: <%= !ENV['CI'] %>
+  name: chef_solo
   always_update_cookbooks: true
 
 verifier:
@@ -14,12 +11,11 @@ verifier:
 
 platforms:
   - name: ubuntu-16.04
-  - name: centos-7.2
 
 suites:
   - name: default
     run_list:
-      - recipe[u2fval-cookbook::default]
+      - recipe[u2fval::default]
     verifier:
       inspec_tests:
         - test/recipes
